--- a/src/components/AlbumList/albumlist.module.css
+++ b/src/components/AlbumList/albumlist.module.css
@@ -1,61 +1,65 @@
-
 /* main container of page */
-.mainContainer{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.mainContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.mainContainer > div{
-    width: 75%;
-    margin-top: 20px;
+.mainContainer > div {
+  width: 75%;
+  margin-top: 20px;
 }
 
 /* container for all the albums */
-.albumContainer{
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top:auto;
+.albumContainer {
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: auto;
 }
 
 /* album form container */
-.albumForm{
-    margin-top: 20px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-self: center;
+.albumForm {
+  margin-top: 20px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-self: center;
 }
-
 
 /* header containing album heading */
-.header span{
-    float:left;
-    margin-top: 100px ;
-    font-size: 1.8rem;
-    font-weight:bold;
-    color: #76739f;
-    font-family: cursive;
-    background-color: rgb(0, 0, 0);
-    box-shadow: 3px 3px rgb(17, 0, 203), -1em 0 .4em rgb(11, 152, 212);
-    width: 200px; 
+.header span {
+  margin-top: 60px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #ffffff;
+  font-family: "Courier New", Courier, monospace;
+  display: flex;
+  background: rgb(22, 12, 114);
+  display: flex;
+  overflow: hidden;
+  padding: 10px;
+  border-radius: 0.25rem;
+  text-align: center;
+  justify-content: center;
+  color: #ffffff;
+  background-color: #6366f1;
+  background-color: #4f46e5;
+  background-color: #4338ca;
+  width: 200px;
+  text-transform: uppercase;
 }
 
-
-
 /* for button create album */
-.btn{
-    margin-top: 100px;
-    float: right;
-    height: 31px;
-    color: white;
-    width: 100px;
-    background-color: #f44336;
-    box-shadow:
-    inset 
-    0 0 0 2px rgb(234, 233, 233),
-    0.3em 0.3em 1em rgba(200, 0, 0, 0.6);
-    
+.btn {
+  margin-top: 20px;
+  float: right;
+  height: 40px;
+  color: white;
+  width: 200px;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: "Courier New", Courier, monospace;
+  background: linear-gradient(144deg, #080328 40%, #756ed6);
 }
